# basics_lab_2021

./: .gitignore  .gitmodules  CMakeLists.txt  GeometryProcessing.md  IDEAS.md  README.md  Rendering.md
exts/: CMakeLists.txt
libs/bcg_library/: CMakeLists.txt  bcg_aligned_box.h  bcg_color.h  bcg_color_spaces.cpp  bcg_color_spaces.h  bcg_colors.cpp  bcg_colors.h  bcg_common.h  bcg_commonio.cpp  bcg_commonio.h  bcg_geometry.h  bcg_geometry_utils.h  bcg_image.cpp  bcg_image.h  bcg_image_io.h  bcg_math.h  bcg_math_constant.h  bcg_matrix.h  bcg_noise.h  bcg_parallel.h  bcg_ray.h  bcg_rigid_body_frame.h  bcg_sampling.h  bcg_shading.h  bcg_transform.h  bcg_transforms.h  bcg_ui_utility.h  bcg_vector.h  bcg_volume.h  bcg_volume_utils.h
libs/bcg_library/color/: CMakeLists.txt  bcg_color.h  bcg_color_rgb.cpp  bcg_color_rgb.h  bcg_color_spaces.cpp  bcg_color_spaces.h  bcg_colormap.cpp  bcg_colormap.h  bcg_colors.cpp  bcg_colors.h
libs/bcg_library/filter/: CMakeLists.txt  bcg_filter.cpp  bcg_filter.h  bcg_filter_correspondence_distance.h  bcg_filter_correspondence_mutual.cpp  bcg_filter_correspondence_mutual.h  bcg_filter_correspondence_normal_angle.h  bcg_filter_threshold.h
libs/bcg_library/geometry/: CMakeLists.txt  bcg_aligned_box.h  bcg_graph.cpp  bcg_graph.h  bcg_mesh.cpp  bcg_mesh.h  bcg_mesh_factory.cpp  bcg_mesh_factory.h  bcg_meshio.cpp  bcg_meshio.h  bcg_neighbors_query.h  bcg_point_cloud.cpp  bcg_point_cloud.h  bcg_point_cloudio.cpp  bcg_point_cloudio.h  bcg_property.h  bcg_property_eigen_trait.h  bcg_property_map_eigen.h  bcg_property_utils.cpp  bcg_property_utils.h  bcg_transforms.h
libs/bcg_library/math/: CMakeLists.txt  bcg_array.h  bcg_bernstein_basis.cpp  bcg_bernstein_basis.h  bcg_binomial_coefficient.cpp  bcg_binomial_coefficient.h  bcg_factorial.cpp  bcg_factorial.h  bcg_gaussian.h  bcg_integration.cpp  bcg_integration.h  bcg_kernel_functions.cpp  bcg_kernel_functions.h  bcg_linalg.h  bcg_m_estimators.h  bcg_math.h  bcg_math_common.h  bcg_math_constant.h  bcg_math_safe_tigonometric_functions.h  bcg_math_types.h  bcg_matrix_map_eigen.h  bcg_matrix_t.h  bcg_monomial_basis.cpp  bcg_monomial_basis.h  bcg_object_space.cpp  bcg_object_space.h  bcg_pca.h  bcg_polynomial.cpp  bcg_polynomial.h  bcg_probabilistic_quadric.h  bcg_quadric_fit.cpp  bcg_quadric_fit.h  bcg_quaternion.h  bcg_robust_pca.h  bcg_vector.h  bcg_vector_map_eigen.h  bcg_vector_t.h  bcg_vertex_classify_curvature.cpp  bcg_vertex_classify_curvature.h
libs/bcg_library/orthodontic/: CMakeLists.txt  bcg_jaw.h  bcg_tooth.h
libs/bcg_library/registration/: CMakeLists.txt  bcg_coherent_point_drift.cpp  bcg_coherent_point_drift.h  bcg_icp_chain.h  bcg_icp_features.cpp  bcg_icp_features.h  bcg_new_icp.h  bcg_points_sampling.cpp  bcg_points_sampling.h  bcg_registration.h  bcg_rigid_icp.cpp  bcg_rigid_icp.h
libs/bcg_library/torch/: CMakeLists.txt  bcg_torch_test.h
libs/bcg_library/utils/: CMakeLists.txt  bcg_bits.h  bcg_dynamic_bitset.h  bcg_file.cpp  bcg_file.h  bcg_file_watcher.h  bcg_heap.h  bcg_logger.h  bcg_macros.h  bcg_path.cpp  bcg_path.h  bcg_ref.h  bcg_stl_utils.h  bcg_string_utils.cpp  bcg_string_utils.h  bcg_test_stl_utils.h  bcg_timer.h  bcg_traits.h
libs/bcg_opengl/: CMakeLists.txt  bcg_camera.cpp  bcg_camera.h  bcg_entity_hierarchy.h  bcg_entity_info.h  bcg_imgui.cpp  bcg_imgui.h  bcg_opengl.cpp  bcg_opengl.h  bcg_opengl_yocto.cpp  bcg_opengl_yocto.h  bcg_picker.h  bcg_projection_matrix.cpp  bcg_projection_matrix.h  bcg_shade.cpp  bcg_viewer.cpp  bcg_viewer.h  bcg_viewer_state.cpp  bcg_viewer_state.h
libs/bcg_opengl/components/: CMakeLists.txt  bcg_component_entity_hierarchy.h  bcg_component_entity_info.h  bcg_component_loading_backup.h  bcg_component_material.h  bcg_component_object_space_view.h  bcg_component_proxy_graph.h  bcg_component_proxy_mesh.h  bcg_component_proxy_point_cloud.h  bcg_component_selection.h  bcg_component_selection_point_overlay.h  bcg_component_selection_vertex_overlay.h  bcg_component_transform.h  bcg_component_transform_object_space.h  bcg_component_transform_world_space.h
libs/bcg_opengl/events/: CMakeLists.txt  bcg_events.h  bcg_events_aligned_box.h  bcg_events_correspondences.h  bcg_events_curve.h  bcg_events_filter.h  bcg_events_gpu.h  bcg_events_graph.h  bcg_events_hierarchy.h  bcg_events_internal.h  bcg_events_laplacian.h  bcg_events_mesh.h  bcg_events_mouse.h  bcg_events_object_space.h  bcg_events_orthodontic.h  bcg_events_overlay_point_cloud.h  bcg_events_picker.h  bcg_events_point_cloud.h  bcg_events_registration.h  bcg_events_spatial_index.h  bcg_events_transform.h  bcg_events_transform_object_space.h  bcg_events_transform_world_space.h
libs/bcg_opengl/guis/: CMakeLists.txt  bcg_gui_aligned_box3.cpp  bcg_gui_aligned_box3.h  bcg_gui_component_entity_hierarchy.cpp  bcg_gui_component_entity_hierarchy.h  bcg_gui_component_entity_info.cpp  bcg_gui_component_entity_info.h  bcg_gui_component_loading_backup.cpp  bcg_gui_component_loading_backup.h  bcg_gui_component_transform_object_space.cpp  bcg_gui_component_transform_object_space.h  bcg_gui_component_transform_world_space.cpp  bcg_gui_component_transform_world_space.h  bcg_gui_components_geometry.cpp  bcg_gui_components_geometry.h  bcg_gui_correspondences.cpp  bcg_gui_correspondences.h  (+188 more)
tests/: CMakeLists.txt  bcg_glm_vector_test.cpp  bcg_map_test.cpp  bcg_template_test.cpp  bcg_test_base_grid.cpp  bcg_test_bernstein_basis.cpp  bcg_test_color_rgb.cpp  bcg_test_dynamic_bitset.cpp  bcg_test_file.cpp  bcg_test_file_watcher.cpp  bcg_test_graph.cpp  bcg_test_gte_map.cpp  bcg_test_mesh.cpp  bcg_test_mesh_simplification.cpp  bcg_test_meshio.cpp  bcg_test_monomial_basis.cpp  bcg_test_occupancy_grid.cpp  bcg_test_point_cloud.cpp  bcg_test_point_cloudio.cpp  bcg_test_polynomial.cpp  bcg_test_property.cpp  bcg_test_sphere.cpp  bcg_test_stl_utils.cpp  bcg_test_string_utils.cpp  bcg_test_torch.cpp  bcg_test_triangle.cpp  bcg_vector_test.cpp
tests/data/: test.3d  test.csv  test.pts  test.txt  test.xyz  test_file.txt  test_mesh.ply  test_read_mesh.off  test_write_mesh.off  test_write_mesh.ply  test_write_mesh.stl
(+1007 files in other folders)
